feat: wip zoom in/out sky camera

--- a/src/hub.html
+++ b/src/hub.html
@@ -1271,6 +1271,8 @@
                     <a-entity bone-visibility="updateWhileInvisible: true;" hover-visuals="hand: right;"></a-entity>
                 </template>
 
+                <a-entity rotation="90 0 0" geometry="primitive: circle; radius: 2" material="side: double; color: red"></a-entity>
+
             </a-entity>
         </a-entity>
 
